<resources>
    <string name="app_name">Navigation Sample</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_in_description">It was popularised in the 1960s with the release of Letraset sheetscontaining Lorem Ipsum.</string>
    <string name="forgot_password_description">That\'s OK, it happens! Click on the button below to get a new password on your email address.</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="label_or">Or</string>
    <string name="email_title">Email address</string>
    <string name="password_title">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_account">Create Account</string>
    <string name="do_you_have_account">Do you have account?</string>
    <string name="terms_of_services_description">I\'m agree to the Terms of Service and Privacy Policy</string>
    <string name="agreement_part_1">I\'m agree to the\u0020</string>
    <string name="agreement_part_2">Terms of Service</string>
    <string name="agreement_part_3">\u0020and\u0020</string>
    <string name="agreement_part_4">Privacy Policy</string>
    <string name="action_continue">Continue</string>
    <string name="notifications">Notifications</string>
    <string name="notification_details">Notification Details</string>
    <string name="settings">Settings</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_and_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log out</string>
    <string name="user_name">Robert Downey Jr.</string>
    <string name="theme">Theme</string>
    <string name="receive_emails">Receive emails</string>
    <string name="push_notifications">Push notifications</string>
    <string name="language">Language</string>
    <string name="account">Account</string>
    <string name="security">Security</string>
    <string name="profile">Profile</string>
    <string name="coin_details">Coin details</string>
    <string name="card_details">Card details</string>
    <string name="wallet">Wallet</string>
    <string name="analysis">Analysis</string>
    <string name="weekly_analysis">Weekly Analysis</string>
    <string name="success">Success</string>
    <string name="analysis_child_3">Analysis Child 3</string>
    <string name="coin_history">Coin History</string>
    <string name="home_child_2">Home Child 2</string>
    <string name="home_child_3">Home Child 3</string>
    <string name="change_card_info">Change Card Info</string>
    <string name="wallet_child_2">Wallet Child 2</string>
    <string name="wallet_child_3">Wallet Child 3</string>
    <string name="home">Home</string>
    <string name="privacy_policy"><b>1. Introduction</b>\n\nWe are responsible for maintaining and protecting the Personal Information under our control. We have designated an individual or individuals who is/are responsible for compliance with our privacy policy.\n
        \n<b>2.Identifying Purposes</b>\n\nWe collect, use and disclose Personal Information to provide you with the product or service you have requested and to offer you additional products and services we believe you might be interested in. The purposes for which we collect Personal Information will be identified before or at the time we collect the information. In certain circumstances, the purposes for which information is collected may be clear, and consent may be implied, such as where your name, address and payment information is provided as part of the order process.\n
        \n<b>3. Consent</b>\n\nKnowledge and consent are required for the collection, use or disclosure of Personal Information except where required or permitted by law. Providing us with your Personal Information is always your choice. However, your decision not to provide certain information may limit our ability to provide you with our products or services. We will not require you to consent to the collection, use, or disclosure of information as a condition to the supply of a product or service, except as required to be able to supply the product or service.\n
        \n<b>4. Limiting Collection</b>\n\nThe Personal Information collected will be limited to those details necessary for the purposes identified by us. With your consent, we may collect Personal Information from you in person, over the telephone or by corresponding with you via mail, facsimile, or the Internet.\n
        \n<b>5. Limiting Use, Disclosure and Retention</b>\n\nPersonal Information may only be used or disclosed for the purpose for which it was collected unless you have otherwise consented, or when it is required or permitted by law. Personal Information will only be retained for the period of time required to fulfill the purpose for which we collected it or as may be required by law. [If applicable, include a description of any parties with whom you may share Personal Information.]\n
        \n<b>6. Accuracy</b>\n\nPersonal Information will be maintained in as accurate, complete and up-to-date form as is necessary to fulfill the purposes for which it is to be used.\n
        \n<b>7. Safeguarding Customer Information</b>\n\nPersonal Information will be protected by security safeguards that are appropriate to the sensitivity level of the information. We take all reasonable precautions to protect your Personal Information from any loss or unauthorized use, access or disclosure./n
        \n<b>8. Openness</b>\n\nWe will make information available to you about our policies and practices with respect to the management of your Personal Information.\n
        \n<b>9. Customer Access</b>\n\nUpon request, you will be informed of the existence, use and disclosure of your Personal Information, and will be given access to it. You may verify the accuracy and completeness of your Personal Information, and may request that it be amended, if appropriate. However, in certain circumstances permitted by law, we will not disclose certain information to you. For example, we may not disclose information relating to you if other individuals are referenced or if there are legal, security or commercial proprietary restrictions.\n
        \n<b>10. Handling Customer Complaints and Suggestions</b>\n\nYou may direct any questions or enquiries with respect to our privacy policy or our practices by contacting:\n
    </string>
    <string name="terms">1. An <b>Intellectual Property</b> clause will inform users that the contents, logo and other visual media you created is your property and is protected by copyright laws.\n
        \n2. A <b>Termination</b> clause will inform users that any accounts on your website and mobile app, or users access to your website and app, can be terminated in case of abuses or at your sole discretion.\n
        \n3. A <b>Governing Law</b> clause will inform users which laws govern the agreement. These laws should come from the country in which your company is headquartered or the country from which you operate your website and mobile app.\n
        \n4. A <b>Links to Other Websites</b> clause will inform users that you are not responsible for any third party websites that you link to. This kind of clause will generally inform users that they are responsible for reading and agreeing (or disagreeing) with the Terms and Conditions or Privacy Policies of these third parties.\n
        \n5. If your <b>website or mobile app</b> allows users to create content and make that content public to other users, a Content clause will inform users that they own the rights to the content they have created. This clause usually mentions that users must give you (the website or mobile app developer/owner) a license so that you can share this content on your website/mobile app and to make it available to other users.\n
        \n6. Because the <b>content created by users</b> is public to other users, a DMCA notice clause (or Copyright Infringement ) section is helpful to inform users and copyright authors that, if any content is found to be a copyright infringement, you will respond to any DMCA takedown notices received and you will take down the content.\n
        \n7. A <b>Limit What Users Can Do</b> clause can inform users that by agreeing to use your service, they are also agreeing to not do certain things. This can be part of a very long and thorough list in your Terms and Conditions agreement so as to encompass the most amount of negative uses.\n
    </string>
    <string name="welcome_robert">Welcome Robert!</string>
    <string name="first_investment">Make your first investment today</string>
    <string name="invest_today">Invest Today</string>
    <string name="trending_coins">Trending Coins</string>
    <string name="payment">Payment</string>
    <string name="send_money">Send money</string>
    <string name="transfers">Transfers</string>
    <string name="pre_approved_payment">Pre approved payment</string>
    <string name="bills">Bills</string>
    <string name="pending_transactions">Pending transactions</string>
    <string name="more_information">More Information</string>
    <string name="change_information">Change Information</string>
    <string name="save">Save</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvc_code">CVC code</string>
    <string name="pin_code">Pin code</string>
    <string name="contact_email">Contact email</string>
    <string name="contact_phone">Contact phone</string>
    <string name="report">Report</string>
    <string name="weekly_analysis_review_title">November first week review</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="analytics_report_has_been_submitted_successfully">Analytics report has been submitted successfully! Thank you!</string>

</resources>
