<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    tools:context=".main.profile.SettingsFragment">

    <LinearLayout
        android:id="@+id/settings_row_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/background_rounded_white"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_theme"
            style="@style/SettingsRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_200" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_language"
            style="@style/SettingsRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_200" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_account"
            style="@style/SettingsRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_200" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_security"
            style="@style/SettingsRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_200" />

        <LinearLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingsRow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/receive_emails"
                app:drawableEndCompat="@null" />

            <androidx.appcompat.widget.SwitchCompat
                style="@style/SwitchCompatStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_200" />

        <LinearLayout
            android:id="@+id/notifications_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingsRow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/push_notifications"
                app:drawableEndCompat="@null" />

            <androidx.appcompat.widget.SwitchCompat
                style="@style/SwitchCompatStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:checked="true" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
