<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pie_explanation_flow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:constraint_referenced_ids="item_1,item_2,item_3,item_4,item_5,item_6"
        app:flow_horizontalGap="12dp"
        app:flow_horizontalStyle="packed"
        app:flow_verticalGap="12dp"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/item_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/background_pie_payment" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/payment"
            android:textColor="@color/gray_900"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/background_pie_send_money" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/send_money"
            android:textColor="@color/gray_900"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/background_pie_transfers" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/transfers"
            android:textColor="@color/gray_900"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/background_pre_approved_payment" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pre_approved_payment"
            android:textColor="@color/gray_900"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/background_pie_bills" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/bills"
            android:textColor="@color/gray_900"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/background_pie_pending_transactions" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pending_transactions"
            android:textColor="@color/gray_900"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
