<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".auth.LoginFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/primary_600"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:lineSpacingExtra="1dp"
        android:text="@string/sign_in_description"
        android:textColor="@color/gray_700"
        app:layout_constraintBottom_toTopOf="@+id/label_facebook_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/label_facebook_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_rounded_gray"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/label_or"
        app:layout_constraintEnd_toStartOf="@+id/label_google_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_facebook"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="40dp"
            android:text="@string/facebook"
            android:textColor="@color/gray_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_facebook"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/label_google_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_rounded_gray"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_facebook_container"
        app:layout_constraintTop_toTopOf="@+id/label_facebook_container">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_google"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="40dp"
            android:text="@string/google"
            android:textColor="@color/gray_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_google"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/label_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_or"
        android:textColor="@color/gray_900"
        app:layout_constraintBottom_toTopOf="@+id/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_facebook_container" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/gray_200"
        app:layout_constraintBottom_toBottomOf="@+id/label_or"
        app:layout_constraintEnd_toStartOf="@+id/label_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_or" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/gray_200"
        app:layout_constraintBottom_toBottomOf="@+id/label_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_or"
        app:layout_constraintTop_toTopOf="@+id/label_or" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email_title"
        app:boxBackgroundColor="@color/gray_50"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:boxStrokeColor="@color/primary_500"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/primary_500"
        app:layout_constraintBottom_toTopOf="@+id/input_password"
        app:layout_constraintTop_toBottomOf="@+id/label_or">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray_900" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password_title"
        app:boxBackgroundColor="@color/gray_50"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:boxStrokeColor="@color/primary_500"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/primary_500"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray_800">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/gray_900" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/forgot_password"
        android:textColor="@color/gray_600"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_log_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary_500"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_description"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:id="@+id/sign_up_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_account"
        android:textColor="@color/gray_800"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_log_in" />

    <TextView
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sign_up"
        android:textColor="@color/primary_500"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/sign_up_description"
        app:layout_constraintTop_toTopOf="@+id/sign_up_description" />
</androidx.constraintlayout.widget.ConstraintLayout>
